# EarthOrbitPlan

./: .codespell-ignore-words  .gitignore  .gitignore.swm  .gitignore.swn  .pre-commit-config.yaml  .readthedocs.yml  LSST_FOV.py  README.md  README.rst  _version.py  events.ecsv  m4opt-scheduler.py  params.ini  params_ultrasat.ini  pyproject.toml  requirements.txt  run_workflow_1.py  tox.ini
backend/: condor.py  dask.py  parallel.py  slurm.py
cerenkov/: __init__.py  electron_loss.py
data/: 14.fits  events.ecsv  events_ultrasat_non_overlap.ecsv  observing-scenarios.ecsv
data/ultrasat/: observing-scenarios.ecsv  ultrasat_allsky.ecsv  ultrasat_non_overlap.ecsv
docs/: conf.py  index.rst  refs.bib  requirements.txt
docs/auto_tutorials/: index.rst
docs/config/: index.rst  params_ini.rst
docs/glossary/: glossary.rst  index.rst
docs/install/: index.rst  install.rst  m4opt.rst
docs/m4opt-scheduler/: postprocess.rst  scheduler.rst
docs/multi-messenger/: cbc.rst  counterpart.rst  index.rst  zenodo_unpacker.rst
docs/notebooks/: compute_GW_detection_rate.ipynb
docs/quick-start/: 14.ecsv  PROGRESS_14.ecsv
docs/quickly/: index.rst  quick_start.rst
docs/scenarios/: index.rst  observing_scenarios copy.rst  observing_scenarios.rst
docs/scheduler/: index.rst  m4opt_sceduler.rst  m4opt_scheduler.rst  postprocess.rst  postprocess_schedules.rst  scheduler.rst
docs/tilepy/: index.rst  tilepy.rst
docs/tools/: index.rst  zenodo_unpacker.rst
docs/tutorials/: GALLERY_HEADER.rst  compute_GW_detection_rate.ipynb  observing_scenarios.ipynb
earthorbitplan/backend/: condor.py
earthorbitplan/config/: params_ultrasat.ini  params_uvex.ini
earthorbitplan/data/: events.tex
earthorbitplan/probability/: detection_probability.py  rate.py
earthorbitplan/scenarios/: params_scenarios.ini  psds.xml  zenodo_downloader.py  zenodo_unpacker.py
earthorbitplan/tutorials/: example.tex  fov.py  kilonovae_detection_rate.ipynb  kilonovae_detection_rate.py  latex.py  observing_scenarios.ipynb  skymap_volume.py
earthorbitplan/utils/: path.py
earthorbitplan/workflow/: area-distance.py  area_distance.py  latex_table.py  mission_limmag.py  postprocess.py  rate_calculation.ipynb  scheduler.py  selection_detection.py  selection_detection_rate.py  unpacker.py  visualization.py
lsst_fov/: extract_lsst_science_camera_detectors.py  fov.py  fov_estimation_lsst.py  lsst_geometry_camera.py  skygrid.py
scenarios/: farah.py  psds.xml  zenodo_downloader.py  zenodo_unpacker.py
scripts/condor/: get_held_jobs.sh
skygrid/: fov.py  skygrid_ultrasat.py
workflow/: detection_probability.py  latex_table.py  m4opt-scheduler.py  m4opt_scheduler.py  postproces.py  postprocess.py  postprocess_schedules.py  probability_comput.ipynb  rate_stats.py  scheduler.py  selection_detection.py
